# tauri-plugin-python

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  index.d.ts  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
.github/workflows/: build.yml  release.yml  test.yml
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: Example.kt  ExamplePlugin.kt
android/src/test/java/: ExampleUnitTest.kt
dist-js/: index.cjs  index.d.ts  index.iife.js  index.js
examples/plain-javascript/: .gitignore  README.md  package.json  verify_bundle.py
examples/plain-javascript/.github/workflows/: build.yml
examples/plain-javascript/src/: index.html  main.js  styles.css
examples/plain-javascript/src-tauri/: Cargo.toml  tauri.conf.json
examples/plain-javascript/src-tauri/.cargo/: config.toml
examples/plain-javascript/src-tauri/capabilities/: default.json
examples/plain-javascript/src-tauri/src/: lib.rs  main.rs
examples/plain-javascript/src-tauri/src-python/: main.py
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: ExamplePlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: read_variable.toml  register_function.toml  run_python.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  py_lib.rs  py_lib_pyo3.rs  py_main_import.rs  tests.rs
