[package]
name = "tauri-plugin-python"
version = "0.3.7"
authors = [ "Marco Mengelkoch" ]
description = "A tauri 2 plugin to use python code in the backend."
keywords = ["rust", "python", "tauri", "gui"]
edition = "2021"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-python"
license = "MIT"
homepage = "https://github.com/marcomq/tauri-plugin-python"
repository = "https://github.com/marcomq/tauri-plugin-python"

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
async-trait = "0.1"

lazy_static = "1.5.0"
async_py = { version = "0.2.0", default-features = false }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.136"
dunce = "1.0.5"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[features]
venv = []
default = ["venv", "rustpython"] # auto load src-python/.venv
# default = ["venv", "pyo3"] # enable to use pyo3 instead of rustpython.
rustpython = ["async_py/rustpython"]
pyo3 = ["async_py/pyo3"]
