[package]
name = "tauri-plugin-python"
version = "0.3.8"
authors = [ "Marco Mengelkoch" ]
description = "A tauri 2 plugin to use python code in the backend."
keywords = ["rust", "python", "tauri", "gui"]
edition = "2021"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-python"
license = "MIT"
homepage = "https://github.com/marcomq/tauri-plugin-python"
repository = "https://github.com/marcomq/tauri-plugin-python"

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
async-trait = "0.1"

async_py = { version = "0.3.2", default-features = false }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.136"
dunce = "1.0.5"

# TEMP: For local debuggin, in case that a local async_py needs to be changed
# [patch.crates-io]
# async_py = { path = "../async_py" }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }

[features]
venv = []
default = ["venv", "pyo3"] # PyO3/CPython backend + auto load src-python/.venv
# default = ["venv", "rustpython"] # swap to the bundled RustPython interpreter (no Python install needed, but limited stdlib)
rustpython = ["async_py/rustpython"]
pyo3 = ["async_py/pyo3"]
